events intake poc